--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,6 @@
-certifi==2022.12.7
-setuptools==58.1.0
-pip==23.0.1
-attrs==22.2.0
-clickclick==20.10.2
-websockets==10.4
-click==8.1.3
-importlib-metadata==6.0.0
-PyYAML==6.0
-jsonschema==4.17.3
-typing-extensions==4.5.0
 pymongo==4.3.3
-zipp==3.15.0
-anyio==3.6.2
-asgiref==3.6.0
-idna==3.4
-Jinja2==3.1.2
-charset-normalizer==3.1.0
-WTForms==3.0.1
-connexion==3.0.0a1
-requests==2.28.2
-dnspython==2.3.0
+connexion[flask,swagger-ui,uvicorn]==3.0.0a1
 Flask==2.2.3
-Werkzeug==2.2.3
-itsdangerous==2.1.2
-MarkupSafe==2.1.2
-urllib3==1.26.14
-pydantic==1.10.6
-a2wsgi==1.7.0
-rfc3986==1.5.0
-email-validator==1.3.1
-sniffio==1.3.0
-Flask-WTF==1.1.1
-py-swagger-ui==1.1.0
+Flask-PyMongO==2.3.0
 flask-mongoengine==1.0.0
-python-dotenv==1.0.0
-fastapi==0.95.0
 mongoengine==0.27.0
-starlette==0.26.1
-httpx==0.23.3
-pyrsistent==0.19.3
-uvicorn==0.17.6
-httpcore==0.16.3
-h11==0.14.0
-watchgod==0.8.2
-inflection==0.5.1
-httptools==0.5.0
-colorama==0.4.6
-python-multipart==0.0.6
